--- a/scholar-rest/pom.xml
+++ b/scholar-rest/pom.xml
@@ -8,7 +8,7 @@
 	<artifactId>scholar-rest</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>Scholar - REST</name>
+	<name>Scholar - REST apis</name>
 
 	<properties>
 		<!-- Explicitly declaring the source encoding eliminates the following 
