--- a/ejb/pom.xml
+++ b/ejb/pom.xml
@@ -108,7 +108,7 @@
             <configuration>
                <ejbVersion>3.1</ejbVersion>
                <!-- this is false by default -->
-               <generateClient>false</generateClient>
+               <generateClient>true</generateClient>
             </configuration>
          </plugin>
 
