ejb integration with persistence

--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -36,6 +36,11 @@
 			<version>0.0.1-SNAPSHOT</version>
 			<type>ejb</type>
 		</dependency>
+		<dependency>
+			<groupId>com.varun.scholar.data</groupId>
+			<artifactId>scholar-data</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
