--- a/shared-interfaces/pom.xml
+++ b/shared-interfaces/pom.xml
@@ -13,12 +13,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>scholar-ejb</artifactId>
-	<groupId>com.varun.scholar.ejb</groupId>
+	<groupId>com.varun.scholar.shared.interfaces</groupId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
-	<name>Server side of remote EJB</name>
-
+	<artifactId>scholar-shared-interfaces</artifactId>
+	<packaging>jar</packaging>
+	<name>Scholar - Shared (Shared API jar)</name>
+	<description>Inter-application: Communicate between REST-EJB applications using EJB and CDI</description>
 
 	<properties>
 		<!-- Explicitly declaring the source encoding eliminates the following 
@@ -37,7 +37,6 @@
 		<!-- other plugin versions -->
 		<version.compiler.plugin>2.3.1</version.compiler.plugin>
 		<version.ejb.plugin>2.3</version.ejb.plugin>
-		<version.war.plugin>2.1.1</version.war.plugin>
 
 		<!-- maven-compiler-plugin -->
 		<maven.compiler.target>1.6</maven.compiler.target>
@@ -61,51 +60,11 @@
 				<scope>import</scope>
 			</dependency>
 
-			<dependency>
-				<groupId>org.jboss.bom</groupId>
-				<artifactId>jboss-javaee-6.0-with-hibernate</artifactId>
-				<version>${version.org.jboss.bom}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
+
 	<dependencies>
-
-		<!-- Import the CDI API, we use provided scope as the API is included in 
-			JBoss AS 7 -->
-		<dependency>
-			<groupId>javax.enterprise</groupId>
-			<artifactId>cdi-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
-
-		<!-- Import the Common Annotations API (JSR-250), we use provided scope 
-			as the API is included in JBoss AS 7 -->
-		<dependency>
-			<groupId>org.jboss.spec.javax.annotation</groupId>
-			<artifactId>jboss-annotations-api_1.1_spec</artifactId>
-			<scope>provided</scope>
-		</dependency>
-
-		<!-- Import the EJB 3.1 API, we use provided scope as the API is included 
-			in JBoss AS 7 -->
-		<dependency>
-			<groupId>org.jboss.spec.javax.ejb</groupId>
-			<artifactId>jboss-ejb-api_3.1_spec</artifactId>
-			<scope>provided</scope>
-		</dependency>
-
-		<!-- Gson: Java to Json conversion -->
-
-		<!-- Import the JPA API, we use provided scope as the API is included in 
-			JBoss AS 7 -->
-		<dependency>
-			<groupId>org.hibernate.javax.persistence</groupId>
-			<artifactId>hibernate-jpa-2.0-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
 
 		<!-- Import the EJB API, we use provided scope as the API is included in 
 			JBoss AS 7 -->
@@ -115,27 +74,6 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- JSR-303 (Bean Validation) Implementation -->
-		<!-- Provides portable constraints such as @Email -->
-		<!-- Hibernate Validator is shipped in JBoss AS 7 -->
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<scope>provided</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-api</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-
-		<dependency>
-			<groupId>com.varun.scholar.shared.interfaces</groupId>
-			<artifactId>scholar-shared-interfaces</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
 		<dependency>
 			<groupId>com.varun.scholar.shared.models</groupId>
 			<artifactId>scholar-shared-models</artifactId>
@@ -144,38 +82,13 @@
 	</dependencies>
 
 	<build>
-		<!-- Set the name of the deployment -->
-		<finalName>scholar-ejb</finalName>
 		<plugins>
-			<plugin>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>${version.war.plugin}</version>
-				<configuration>
-					<!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
-					<failOnMissingWebXml>false</failOnMissingWebXml>
-
-					<webResources>
-						<resource>
-							<directory>src/main/resources/META-INF</directory>
-							<!-- override the destination directory for this resource -->
-							<targetPath>META-INF</targetPath>
-							<includes>
-								<include>persistence.xml</include>
-								<include>hibernate4-quickstart-ds.xml</include>
-							</includes>
-						</resource>
-					</webResources>
-
-				</configuration>
-			</plugin>
-			<!-- JBoss AS plugin to deploy the application -->
+			<!-- This jar is deployed to JBoss AS as a JBoss Module, which we can 
+				depend on from other deployments -->
 			<plugin>
 				<groupId>org.jboss.as.plugins</groupId>
 				<artifactId>jboss-as-maven-plugin</artifactId>
 				<version>${version.org.jboss.as.plugins.maven.plugin}</version>
-				<configuration>
-					<filename>${project.build.finalName}.jar</filename>
-				</configuration>
 			</plugin>
 			<!-- Compiler plugin enforces Java 1.6 compatibility and activates annotation 
 				processors -->
@@ -187,19 +100,9 @@
 					<target>${maven.compiler.target}</target>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-ejb-plugin</artifactId>
-				<version>${version.ejb.plugin}</version>
-				<configuration>
-					<ejbVersion>3.1</ejbVersion>
-					<!-- this is false by default -->
-					<generateClient>false</generateClient>
-				</configuration>
-			</plugin>
-
 		</plugins>
 	</build>
 
 
 </project>
+
