--- a/scholar-rest/pom.xml
+++ b/scholar-rest/pom.xml
@@ -113,6 +113,17 @@
 				<configuration>
 					<!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
 					<failOnMissingWebXml>false</failOnMissingWebXml>
+
+					<!-- Define a dependency on the shared API, which will be used by JBoss 
+						Modules at runtime. See the corresponding dependency declared in the POM, 
+						which defines the dependency at compile time. 
+						<archive> 
+							<manifestEntries> 
+								<Dependencies>scholar-shared-interfaces-0.0.1-SNAPSHOT.jar</Dependencies> 
+							</manifestEntries> 
+						</archive> 
+					-->
+
 				</configuration>
 			</plugin>
 			<!-- JBoss AS plugin to deploy war -->
