User mgmt, role auto refresh fixes

--- a/scholar-business/pom.xml
+++ b/scholar-business/pom.xml
@@ -139,6 +139,7 @@
 			<groupId>com.varun.scholar.shared</groupId>
 			<artifactId>scholar-shared</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
