--- a/scholar-rest/pom.xml
+++ b/scholar-rest/pom.xml
@@ -128,6 +128,7 @@
 			<groupId>com.varun.scholar.shared</groupId>
 			<artifactId>scholar-shared</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
     </dependencies>
 
